[package]
name = "pbrt-rust"
version = "0.1.0"
authors = ["Alex <alexmeli100@gmail.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[build-dependencies]
lalrpop = "0.19.4"

[dependencies]
num = "0.2.0"
nalgebra = "0.19.0"
ndarray = { version = "0.14.0", features = ["rayon"] }
enum_dispatch = "0.3.5"
lalrpop-util = "0.19.4"
regex = "1.4.3"
rayon = "1.1"
image = "0.23.12"
array-init = "1.0.0"
num_cpus = "1.0"
atom = "0.4.0"
exr = "1.0.0"
parking_lot = "0.11.1"
typed-arena = "2.0.1"
ordered-float = "2.1.1"
structopt = "0.3.21"
indicatif = {version = "0.15.0", features = ["rayon"]}
bumpalo = "3.4.0"
bumpalo-herd = "0.1.1"
lazy_static = "1.4.0"
crossbeam = "0.7"
hexf = "0.1.0"
anyhow = "1.0"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
ply-rs = "0.1.3"
byteorder = "1.3.4"
smallvec = "1.6.0"
static_assertions = "1.1.0"
approx = "0.4.0"
float_next_after = "0.1.5"
state = { version = "0.4.2", features = ["tls"] }
pbrt_macros = { path = "./pbrt_macros" }

[profile.release]
debug = true